@@ -120,4 +120,5 @@ README.pdf application/pdf
 # Copied from http://bugs.freedesktop.org/show_bug.cgi?id=15260
 test.gnd application/gnunet-directory
 text.ps application/postscript
+test.cmake text/x-cmake
 
