@@ -1,0 +1,5 @@
+project(sample)
+
+set(foo_sources foo1.c foo2.c)
+add_executable(foo ${foo_sources})
+
