@@ -1,3 +1,10 @@
+2008-04-21  Pino Toscano  <pino@kde.org>
+
+	* freedesktop.org.xml.in:
+	* tests/test.cmake:
+	* tests/list: Add mime-type for CMake scripts, patch from
+	Aleix Pol <aleixpol@gmail.com> (Closes: #15561)
+
 2008-04-21  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in:
